--- a/requirements.txt
+++ b/requirements.txt
@@ -1,5 +1,24 @@
 pandas
 transformers
 sklearn
-pytorch
 joblib
+torch
+environs
+alembic==0.9.8
+aniso8601==3.0.0
+bcrypt==3.1.4
+cffi==1.11.5
+click==6.7
+Flask==0.12.2
+flask-restplus==0.10.1
+Flask-Script==2.0.6
+Flask-Testing==0.7.1
+itsdangerous==0.24
+Jinja2==2.10
+jsonschema==2.6.0
+Mako==1.0.7
+pycparser==2.18
+python-dateutil==2.7.0
+python-editor==1.0.3
+pytz==2018.3
+Werkzeug==0.14.1
