--- a/requirements.txt
+++ b/requirements.txt
@@ -2,7 +2,7 @@ pandas
 transformers
 sklearn
 joblib
-http://download.pytorch.org/whl/cpu/torch-0.4.1-cp36-cp36m-linux_x86_64.whl
+torch==1.5.0+cpu -f https://download.pytorch.org/whl/torch_stable.html
 environs
 alembic==0.9.8
 aniso8601==3.0.0
